4. On mobile screen - Trending Section - 2nd slide The Image in the carousal is not presented at the correct height and width.

--- a/assets/css/app_resp.css
+++ b/assets/css/app_resp.css
@@ -200,6 +200,10 @@
 	section.trending { padding: 0 0 45px 0; }
 	.trending_carousel { margin-top: -15px; }
 
+	section.trending article{
+		width: 100%;
+	}
+
 	section.trending article.two {
 		margin-top: 0;
 		margin-bottom: 16px;
